# SECRET_ENGINE_new

./: .codefetchignore  .gitignore  BRANCH_OVERRIDE_SUMMARY.md  BUILD_VERIFICATION_REPORT.md  CLEANUP_SYSTEM_SUMMARY.md  CMakeLists.txt  COMMIT_MSG.txt  COMMIT_SUMMARY.md  CPP26_BEFORE_AFTER.md  CPP26_COMPLETE_SUMMARY.md  CPP26_CONVERSION_SUMMARY.md  CPP26_FULL_CONVERSION_STATUS.md  CPP26_INDEX.md  CPP26_SESSION_SUMMARY.md  CPP26_VALIDATION_COMPLETE.md  CULLING_DISABLED.md  CYBERPUNK_ARCHITECTURE.md  CYBERPUNK_BUILD_CHECKLIST.md  CYBERPUNK_CITY_DEMO.md  CYBERPUNK_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_VERIFICATION_RESULTS.md  DEPLOYMENT_VERIFIED.md  DEVICE_DEPLOYMENT_VERIFIED.md  FINAL_COMMIT.txt  FINAL_SOLUTION.txt  FINAL_STATUS.md  FINAL_VERIFICATION_REPORT.md  GPU_TIMING_FIXED.md  KIRO_TEST_PROMPT.txt  MERGE_COMPLETE.md  OVERLOAD_IMPLEMENTATION_COMPLETE.md  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART_CYBERPUNK.md  QUICK_REFERENCE.md  README.md  TEST_CPP26_ON_DEVICE.md  UI_CONFIG_README.md  VERIFICATION_COMPLETE.md  (+24 more)
Assets/: engine_config_cyberpunk.json  fps_arena.json  main_menu.json  racing_track.json  scene.json  test_level.json  ui_cyberpunk.json
android/: build.gradle  settings.gradle
blender_addon/: ADVANCED.md  CHANGELOG.md  INDEX.md  QUICKSTART.md  README.md  SUMMARY.md  TROUBLESHOOTING.md  WORKFLOW.md  example_batch_operations.py  install.bat  install.sh
codefetch/: SecretEngine_Code.md  codebase.md
core/: CMakeLists.txt
core/include/SecretEngine/: CPP26Features.h  Components.h  ComponentsNew.h  Core.h  Entity.h  EntityObject.h  Event.h  IAllocator.h  IAssetProvider.h  IComponent.h  ICore.h  IInputSystem.h  ILightingSystem.h  ILogger.h  IMaterialSystem.h  IPlugin.h  IRenderer.h  IShadowSystem.h  ITextureSystem.h  IWorld.h  JobSystem.h  Math.h  Scene.h
core/include/SecretEngine/Fast/: FDA_Math.h  FastData.h
core/rendering/gi/: LightVertexCompact.h
core/src/: AssetProvider.cpp  ComponentsNew.cpp  Core.cpp  Entity.cpp  EntityObject.cpp  JobSystem.cpp  Logger.cpp  Logger.h  PluginManager.cpp  PluginManager.h  Scene.cpp  SystemAllocator.cpp  SystemAllocator.h  World.cpp
core/src/platform/android/: AndroidMain.cpp
data/: LevelDefinitions.json
docs/: PERFORMANCE_STATS.md  README.md  v73_implementation_summary.md
plugins/: CMakeLists.txt
plugins/AndroidInput/: CMakeLists.txt
plugins/AndroidInput/src/: InputPlugin.cpp  InputPlugin.h  UIConfig.cpp  UIConfig.h
plugins/CameraPlugin/: CMakeLists.txt
plugins/CameraPlugin/src/: CameraPlugin.h
plugins/DebugPlugin/: CMakeLists.txt
plugins/DebugPlugin/src/: DebugPlugin.cpp  DebugPlugin.h  Profiler.cpp  Profiler.h
plugins/FPSGameLogic/: CMakeLists.txt  plugin_manifest.json
plugins/FPSGameLogic/src/: FPSComponents.h  FPSFastData.h  FPSGamePlugin.cpp  FPSGamePlugin.h  FPSSystems.cpp
plugins/FPSUIPlugin/: CMakeLists.txt  plugin_manifest.json
plugins/FPSUIPlugin/src/: FPSUIPlugin.cpp  FPSUIPlugin.h
plugins/GameLogic/: CMakeLists.txt
plugins/GameLogic/src/: LogicPlugin.cpp  LogicPlugin.h
plugins/GameplayTagSystem/: CMakeLists.txt  plugin_manifest.json
plugins/GameplayTagSystem/src/: GameplayAbilitySystem.h  GameplayDataTable.cpp  GameplayTagPlugin.cpp  GameplayTagPlugin.h  GameplayTags.h
plugins/LevelSystem/: CMakeLists.txt  README.md  plugin_manifest.json
plugins/LevelSystem/examples/: usage_example.cpp  v73_arena_level.json
plugins/LevelSystem/include/: SceneLoader.h
plugins/LevelSystem/src/: LevelLoader.cpp  LevelLoader.h  LevelManager.cpp  LevelManager.h  LevelSystemPlugin.cpp  LevelSystemPlugin.h  LevelTypes.h  ModernLevelLoader.cpp  ModernLevelLoader.h  ModernLevelTypes.h  SceneLoader.cpp  TriggerSystem.cpp  TriggerSystem.h  V73LevelManager.cpp  V73LevelManager.h  V73LevelManagerImpl.cpp  V73LevelSystem.h  V73LevelSystemPlugin.cpp  V73LevelSystemPlugin.h
plugins/LevelSystem/src/Streaming/: LevelStreamingSubsystem.cpp  LevelStreamingSubsystem.h  NetworkedLevelStreamer.h
plugins/LevelSystem/src/v73/: GPUInstanceManager.cpp  GPUInstanceManager.h  V73CoreTypes.h  V73JsonParser.cpp  V73JsonParser.h
plugins/LevelSystem/tests/: V73SystemTest.cpp
plugins/LightingSystem/: CMakeLists.txt
plugins/LightingSystem/src/: LightManager.cpp  LightManager.h  LightingPlugin.cpp  LightingPlugin.h  MegaLightRenderer.cpp  MegaLightRenderer.h
plugins/MaterialSystem/: CMakeLists.txt
plugins/MaterialSystem/src/: MaterialPlugin.cpp  MaterialPlugin.h
plugins/ParticleSystemPlugin/: CMakeLists.txt  plugin_manifest.json
plugins/ParticleSystemPlugin/src/: ParticleSystemPlugin.cpp
plugins/PhysicsPlugin/: CMakeLists.txt  PHYSICS_FEATURES.md  plugin_manifest.json
plugins/PhysicsPlugin/src/: CollisionDetection.h  PhysicsPlugin.cpp  PhysicsPlugin.h  PhysicsTypes.h
plugins/ProceduralCityPlugin/: CMakeLists.txt  plugin_manifest.json
plugins/ProceduralCityPlugin/src/: ProceduralCityPlugin.cpp
plugins/ShadowSystem/: CMakeLists.txt
plugins/ShadowSystem/src/: ShadowPlugin.cpp  ShadowPlugin.h
plugins/TextureSystem/: CMakeLists.txt
plugins/TextureSystem/src/: TexturePlugin.cpp  TexturePlugin.h
plugins/VulkanRenderer/: CMakeLists.txt  plugin_manifest.json
plugins/VulkanRenderer/shaders/: basic3d.frag  basic3d.vert  basic3d_vert.spv  cull.comp  mega_geometry.frag  mega_geometry.vert  particle_frag.glsl  particle_vert.glsl  simple2d.vert  vertex_merge_v4.comp  volumetric_lighting.comp
plugins/VulkanRenderer/src/: LightVertexCompact.h  MegaGeometryRenderer.cpp  MegaGeometryRenderer.h  MeshRenderingSystem.cpp  MeshRenderingSystem.h  Pipeline3D.cpp  Pipeline3D.h  RendererPlugin.cpp  RendererPlugin.h  SimpleVertexLighting.h  Swapchain.cpp  Swapchain.h  TextureManager.cpp  TextureManager.h  VertexColorLightingIntegration.cpp  VertexColorLightingTest.cpp  VertexGIManager.h  VertexShadowsGI.h  VulkanDevice.cpp  VulkanDevice.h  VulkanHelpers.cpp  VulkanHelpers.h  Window.cpp  Window.h
scripts/: extract_pdf.py
tests/: CMakeLists.txt  PluginLoadTest.cpp  cpp26_feature_test.cpp
tools/: CMakeLists.txt  HierachyBuilder.html  compile_3d_shaders.bat  cook_mesh.py  (+5 more)
(+318 files in other folders)
